--- a/index.html
+++ b/index.html
@@ -6,55 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Supplend: Inventory Management</title>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <!-- <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap&text=Supplend"
-      rel="stylesheet"
-    />
-    <link
       href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@300..900&display=swap"
-      rel="stylesheet"
-    />
-
-    <meta
-      name="description"
-      content="Supplend is a innovative utility for companies' material, order and product inventory management."
-    />
+      rel="stylesheet" /> -->
+    <meta name="description"
+      content="Supplend is a innovative utility for companies' material, order and product inventory management." />
     <meta name="author" content="Alan Burić" />
     <meta name="keywords" content="inventory, management, software, app, webapp" />
 
     <!-- <meta property="og:url" content="{{pageUrl}}"> -->
     <!-- <meta property="og:image" content="{{imageUrl}}"> -->
-    <meta
-      property="og:description"
-      content="Supplend is a innovative utility for companies' material, order and product inventory management."
-    />
+    <meta property="og:description"
+      content="Supplend is a innovative utility for companies' material, order and product inventory management." />
     <meta property="og:title" content="Supplend" />
     <meta property="og:site_name" content="Supplend" />
     <!-- <meta property="og:see_also" content="{{homepageUrl}}"> -->
 
     <meta itemprop="name" content="Supplend" />
-    <meta
-      itemprop="description"
-      content="Supplend is a innovative utility for companies' material, order and product inventory management."
-    />
+    <meta itemprop="description"
+      content="Supplend is a innovative utility for companies' material, order and product inventory management." />
     <!-- <meta itemprop="image" content="{{imageUrl}}"> -->
 
-    <meta
-      name="twitter:card"
-      content="Supplend is a innovative utility for companies' material, order and product inventory management."
-    />
+    <meta name="twitter:card"
+      content="Supplend is a innovative utility for companies' material, order and product inventory management." />
     <!-- <meta name="twitter:url" content="{{pageUrl}}"> -->
     <meta name="twitter:title" content="Supplend" />
-    <meta
-      name="twitter:description"
-      content="Supplend is a innovative utility for companies' material, order and product inventory management."
-    />
+    <meta name="twitter:description"
+      content="Supplend is a innovative utility for companies' material, order and product inventory management." />
     <!-- <meta name="twitter:image" content="{{imageUrl}}"> -->
   </head>
   <body>
