Improvements and additions - rename 'news' to 'blog' - add primary and secondary button classes instead of home-btn - improve the navbar, add a hamburger button, make the navbar content hide or show depending on screen size - connect the Firebase app a bit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="inventory, management, software, app, webapp" />
 
     <!-- <meta property="og:url" content="{{pageUrl}}"> -->
-    <!-- <meta property="og:image" content="{{imageUrl}}"> -->
+    <meta property="og:image" content="/src/assets/logo.svg">
     <meta property="og:description"
       content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
     <meta property="og:title" content="Distribunity" />
@@ -29,7 +29,7 @@
     <meta itemprop="name" content="Distribunity" />
     <meta itemprop="description"
       content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
-    <!-- <meta itemprop="image" content="{{imageUrl}}"> -->
+    <meta itemprop="image" content="/src/assets/logo.svg">
 
     <meta name="twitter:card"
       content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
@@ -37,7 +37,7 @@
     <meta name="twitter:title" content="Distribunity" />
     <meta name="twitter:description"
       content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
-    <!-- <meta name="twitter:image" content="{{imageUrl}}"> -->
+    <meta name="twitter:image" content="/src/assets/logo.svg">
   </head>
   <body>
     <div id="app"></div>
