--- a/index.html
+++ b/index.html
@@ -14,29 +14,29 @@
       as="font" type="font/woff2" crossorigin>
 
     <meta name="description"
-      content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
+      content="Distribunity is an innovative utility helping businesses manage their materials and products." />
     <meta name="author" content="Alan Burić" />
     <meta name="keywords" content="inventory, management, software, app, webapp" />
 
     <!-- <meta property="og:url" content="{{pageUrl}}"> -->
     <meta property="og:image" content="/src/assets/logo.svg">
     <meta property="og:description"
-      content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
+      content="Distribunity is an innovative utility helping businesses manage their materials and products." />
     <meta property="og:title" content="Distribunity" />
     <meta property="og:site_name" content="Distribunity" />
     <!-- <meta property="og:see_also" content="{{homepageUrl}}"> -->
 
     <meta itemprop="name" content="Distribunity" />
     <meta itemprop="description"
-      content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
+      content="Distribunity is an innovative utility helping businesses manage their materials and products." />
     <meta itemprop="image" content="/src/assets/logo.svg">
 
     <meta name="twitter:card"
-      content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
+      content="Distribunity is an innovative utility helping businesses manage their materials and products." />
     <!-- <meta name="twitter:url" content="{{pageUrl}}"> -->
     <meta name="twitter:title" content="Distribunity" />
     <meta name="twitter:description"
-      content="Distribunity is a innovative utility for companies' material, order and product inventory management." />
+      content="Distribunity is an innovative utility helping businesses manage their materials and products." />
     <meta name="twitter:image" content="/src/assets/logo.svg">
   </head>
   <body>
