--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <meta name="keywords" content="inventory, management, software, app, webapp" />
 
     <!-- <meta property="og:url" content="{{pageUrl}}"> -->
-    <meta property="og:image" content="/src/assets/logo.svg">
+    <meta property="og:image" content="/logo.webp">
     <meta property="og:description"
       content="Distribunity is an innovative utility helping businesses manage their materials and products." />
     <meta property="og:title" content="Distribunity" />
@@ -29,7 +29,7 @@
     <meta itemprop="name" content="Distribunity" />
     <meta itemprop="description"
       content="Distribunity is an innovative utility helping businesses manage their materials and products." />
-    <meta itemprop="image" content="/src/assets/logo.svg">
+    <meta itemprop="image" content="/logo.webp">
 
     <meta name="twitter:card"
       content="Distribunity is an innovative utility helping businesses manage their materials and products." />
@@ -37,7 +37,7 @@
     <meta name="twitter:title" content="Distribunity" />
     <meta name="twitter:description"
       content="Distribunity is an innovative utility helping businesses manage their materials and products." />
-    <meta name="twitter:image" content="/src/assets/logo.svg">
+    <meta name="twitter:image" content="/logo.webp">
   </head>
   <body>
     <div id="app"></div>
