--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <meta name="author" content="Alan Burić" />
     <meta name="keywords" content="inventory, management, software, app, webapp" />
 
-    <!-- <meta property="og:url" content="{{pageUrl}}"> -->
-    <meta property="og:image" content="/logo.webp">
+    <meta property="og:url" content="https://distribunity.web.app">
+    <meta property="og:image" content="https://distribunity.web.app/logo.webp">
+    <meta property="og:type" content="website" />
     <meta property="og:description"
       content="Distribunity is an innovative utility helping businesses manage their materials and products." />
     <meta property="og:title" content="Distribunity" />
     <meta property="og:site_name" content="Distribunity" />
-    <!-- <meta property="og:see_also" content="{{homepageUrl}}"> -->
+    <meta property="og:see_also" content="https://distribunity.web.app/resources">
 
     <meta itemprop="name" content="Distribunity" />
     <meta itemprop="description"
@@ -33,7 +34,7 @@
 
     <meta name="twitter:card"
       content="Distribunity is an innovative utility helping businesses manage their materials and products." />
-    <!-- <meta name="twitter:url" content="{{pageUrl}}"> -->
+    <meta name="twitter:url" content="https://distribunity.web.app">
     <meta name="twitter:title" content="Distribunity" />
     <meta name="twitter:description"
       content="Distribunity is an innovative utility helping businesses manage their materials and products." />
